# BirdFeeder

./: .gitignore  CMakeLists.txt  README.md  diff.txt  diff_utf8.txt  out.txt  out2.txt  partitions.csv  pyproject.toml  sdkconfig.defaults  test_tflite.py  training_log.txt
.github/workflows/: test.yml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md
app/: App.tsx  app.json  package-lock.json  package.json
app/app/: _layout.tsx
app/app/(tabs)/: _layout.tsx  events.tsx  index.tsx  settings.tsx
app/src/context/: SettingsContext.tsx
documentation/: plans.md  progress.md
hardware/: BOM.csv  README.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  board_config.h  i2c_bus.c  i2c_bus.h  idf_component.yml  max17048.c  power_manager.c  power_manager.h  threat_logic.h  wifi_secrets.example.h
main/actuators/: servo.c  servo.h  servo_math.h
main/comms/: http_server.c  http_server.h  ota.c  wifi.c
main/logging/: events.c  events.h
main/sensors/: camera.c  camera.h  camera_manager.c  camera_manager.h  max17048.c  max17048.h  max17048_math.h  pir.c  pir.h
main/storage/: fram.c  fram.h  snapshot_store.c  snapshot_store.h
main/vision/: labels.txt  model_data.c  model_data.h  model_int8.tflite  vision.c  vision.cpp  vision.h  vision_utils.h
test/: CMakeLists.txt  test_fram_bounds.c  test_main.c  test_sensor_conversions.c  test_servo_math.c  test_threat_logic.c  test_vision_utils.c
tools/: augment_real_data.py  capture_backgrounds.py  cleanup_dataset.py  conftest.py  decode_frame.py  generate_background.py  latest_frame.b64  list_ops.py  model_ops.txt  probe_model.py  probe_output.txt  rename_dataset.py  test_model.py  test_tflite.py  train_and_convert.py
