set(MODEL_TFLITE "vision/model_int8.tflite")

idf_component_register(
    SRCS
        "app_main.c"
        "i2c_bus.c"
        "power_manager.c"
        "sensors/max17048.c"
        "sensors/pir.c"
        "sensors/camera.c"
        "sensors/camera_manager.c"
        "vision/vision.cpp"
        "vision/model_data.c"
        "actuators/servo.c"
        "comms/wifi.c"
        "comms/ota.c"
        "comms/http_server.c"
        "storage/fram.c"
        "storage/snapshot_store.c"
        "logging/events.c"
    INCLUDE_DIRS
        "."
        "sensors"
        "actuators"
        "comms"
        "storage"
        "logging"
        "vision"
    EMBED_FILES
        ${MODEL_TFLITE}
)
